# embedding-from-scratch

./: LICENSE  README.md  pyproject.toml
configs/: embedding_base.toml  embedding_large.toml
data/: corpus.txt  pairs_train.jsonl  pairs_val.jsonl
scripts/: demo_rag.py  finetune.py  pretrain.py
src/embedding/: __init__.py
src/embedding/data/: __init__.py  collators.py  dataset.py  tokenizer.py
src/embedding/losses/: __init__.py  contrastive.py  matryoshka.py  mnr.py  triplet.py
src/embedding/mining/: __init__.py  hard_negative.py
src/embedding/model/: __init__.py  attention.py  config.py  embeddings.py  encoder.py  layers.py
src/embedding/rag/: __init__.py  chunker.py  pipeline.py  reranker.py  retriever.py
src/embedding/training/: __init__.py  metrics.py  optimizer.py  trainer.py
src/embedding/utils/: __init__.py  device.py
tests/: test_chunker.py  test_losses.py  test_model.py
